--- a/src/components/MyfuseWorks/myfuseWorks.css
+++ b/src/components/MyfuseWorks/myfuseWorks.css
@@ -1,9 +1,9 @@
 .myfuseWorks {
-    padding: 50px 0;
+    margin: 50px 0;
 }
 
 .myfuseWorks h3.title {
-    padding: 20px 0;
+    padding: 20px 0 40px 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
 }
