--- a/src/components/ResumeBuilder/resumeBuilder.css
+++ b/src/components/ResumeBuilder/resumeBuilder.css
@@ -2,7 +2,6 @@
     height: 600px;
     width: 100%;
     border-radius: 30px;
-    max-width: 900px;
     display: flex;
     flex-direction: column;
     justify-content: center;
